--- a/style.css
+++ b/style.css
@@ -26,100 +26,58 @@ a:hover, a:active {
   transform: translate(-50%, -50%);
 }
 
-.background {
-    -webkit-animation-duration: 1s;
-    -webkit-animation-fill-mode: forwards;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-name: placeHolderShimmer;
-    -webkit-animation-timing-function: linear;
-    background: #f6f7f9;
-    background-image: linear-gradient(to right, #f6f7f9 0%, #e9ebee 20%, #f6f7f9 40%, #f6f7f9 100%);
-    background-repeat: no-repeat;
-    background-size: 800px 104px;
-    height: 104px;
-    position: relative;
+.br {
+  border-radius: 8px;  
 }
-section{
-  padding: 12px;
-  max-width: 476px;
-  height: 300px;
-  margin: 4rem auto;
-  background-color: #fff;
-    border: 1px solid;
-    border-color: #e5e6e9 #dfe0e4 #d0d1d5;
-    border-radius: 3px;
-
+.w80 {
+   width: 80%;
 }
-
-.background div {
-    background: #fff;
-    height: 6px;
-    left: 0;
-    position: absolute;
-    right: 0;
+.card {
+  border: 2px solid #fff;
+  box-shadow:0px 0px 10px 0 #a9a9a9;
+  padding: 30px 40px;
+  width: 80%;
+  margin: 50px auto;
 }
-div.a {
-    height: 40px;
-    left: 40px;
-    right: auto;
-    top: 0;
-    width: 8px;
+.profilePic {
+  height: 65px;
+  width: 65px;
+  border-radius: 50%;
+}
+.comment {
+  height: 10px;
+  background: #777;
+  margin-top: 20px;
 }
 
-div.b {
-    height: 8px;
-    left: 48px;
-    top: 0;
-}
-div.c {
-    left: 136px;
-    top: 8px;
-}
-div.d {
-    height: 12px;
-    left: 48px;
-    top: 14px;
-}
-div.e {
-    left: 100px;
-    top: 26px;
-}
-div.f {
-    height: 10px;
-    left: 48px;
-    top: 32px;
-}
-div.g {
-    height: 20px;
-    top: 40px;
-}
-div.h {
-    left: 410px;
-    top: 60px;
-}
-div.i {
-    height: 13px;
-    top: 66px;
-}
-div.j {
-    left: 440px;
-    top: 79px;
-}
-div.k {
-    height: 13px;
-    top: 85px;
-}
-div.l {
-    left: 178px;
-    top: 98px;
+.wrapper {
+  width: 0px;
+  animation: fullView 0.5s forwards linear;
 }
 
-@keyframes placeHolderShimmer{
-  
-0% {
-    background-position: -468px 0;
+@keyframes fullView {
+  100% {
+    width: 100%;
+  }
 }
-100% {
-    background-position: 468px 0;
+
+.animate {
+   animation : shimmer 2s infinite;
+   background: linear-gradient(to right, #eff1f3 4%, #e2e2e2 25%, #eff1f3 36%);
+   background-size: 1000px 100%;
 }
+
+@keyframes shimmer {
+  0% {
+    background-position: -1000px 0;
+  }
+  100% {
+    background-position: 1000px 0;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .hide {
+    display: none;
+  }
 }
